# harmony-doc-search-mcp

./: .gitignore  README.md  pyproject.toml
examples/: mcp-config.json
src/harmony_doc_search_mcp/: server.py
