[project]
name = "harmony-doc-search-mcp"
version = "0.1.0"
description = "FastMCP server for searching official HarmonyOS developer documentation"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "John Ren" }
]
dependencies = [
  "fastmcp>=2.0.0",
  "httpx>=0.27.0",
]

[project.scripts]
harmony-doc-search-mcp = "harmony_doc_search_mcp.server:main"

[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["src/harmony_doc_search_mcp"]

[dependency-groups]
dev = [
  "ruff>=0.8.0",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
